objects/LLC_BI__Unit__c.object
<CustomObject>
    <description>This object represents a unit of space that belongs to collateral.</description>
    <fields>
        <fullName>LLC_BI__Area_Measurement__c</fullName>
        <description>Users populate this optional picklist field to capture the unit of measurement used for the size of the area.</description>
        <label>Area Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sq Feet</fullName>
                </value>
                <value>
                    <fullName>Sq Meters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <description>Users populate this required lookup field to reference the collateral that is associated with the unit.</description>
        <inlineHelpText>This field displays the relationship between the collateral and the unit.</inlineHelpText>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Frequency__c</fullName>
        <description>Users populate this optional picklist field to capture whether they are tracking the cost per area on a monthly or annual basis.</description>
        <label>Cost Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Per_Area__c</fullName>
        <description>Users populate this optional currency field to capture the cost per area unit.</description>
        <label>Cost Per Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Energy_Performance_Rating_Expiry_Date__c</fullName>
        <description>Users populate this optional date field to capture the expiry date for the energy performance rating.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Energy Performance Rating Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Energy_Performance_Rating__c</fullName>
        <description>Users populate this optional text field to capture the energy performance rating to determine the level of energy efficiency.</description>
        <label>Energy Performance Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Floor_Area__c</fullName>
        <description>Users populate this optional number field to indicate the total square measurement of floor space in square units.</description>
        <inlineHelpText>This field defines the total square measurement of floor space in square units.</inlineHelpText>
        <label>Floor Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users populate this optional checkbox field to indicate if the unit has been archived and is no longer in use.</description>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name__c</fullName>
        <description>Users populate this required text field to capture the name of the unit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unit_Type__c</fullName>
        <description>Users populate this required picklist field to capture the type for the unit.</description>
        <label>Unit Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Warehouse/Distribution</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Unit</label>
    <nameField>
        <displayFormat>Unit-{00000000}</displayFormat>
        <label>Unit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>